[package]
name = "neuromorphic_lib"
version = "0.1.0"
authors = ["Your Name <your@email.com>"]
edition = "2018"

[dependencies]
num-traits = "0.2.14"
rand = "0.8.3"
nalgebra = "0.24.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

[lib]
name = "neuromorphic_lib"
path = "src/lib.rs"
crate-type = ["lib"]
